--- a/src/main/webapp/member_info.html
+++ b/src/main/webapp/member_info.html
@@ -277,7 +277,7 @@
             layer.open({
                 type: 2,
                 title: '积分增减',
-                content: './iframe_member_integral.html?id=' + getUrl("id") + "&v=" + Date.now(),
+                content: './iframe_member_integral.html?id='+id+'&v=' + Date.now(),
                 skin: 'demo-class',
                 shadeClose: true,
                 shade: 0.6,
