--- a/src/main/webapp/iframe_card_pay.html
+++ b/src/main/webapp/iframe_card_pay.html
@@ -5,80 +5,43 @@
     <title>会员卡</title>
     <script src="js/loadcss.js" type="text/javascript" charset="utf-8"></script>
     <style>
-        .show{padding: 9px 20px;}
+        .show {
+            padding: 9px 20px;
+        }
     </style>
 </head>
 <body>
-<OBJECT id=MSComm1 CLASSID="clsid:648A5600-2C6E-101B-82B6-000000000014" codebase="mscomm32.ocx" type="application/x-oleobject" style="LEFT:54px;TOP:14px">
-    <PARAM   NAME="CommPort"   VALUE="3"/>
-    <PARAM   NAME="DataBits"   VALUE="8"/>
-    <PARAM   NAME="StopBits"   VALUE="1"/>
-    <PARAM   NAME="BaudRate"   VALUE="9600"/>
-    <PARAM   NAME="Settings"   VALUE="9600,N,8,1"/>
-    <PARAM   NAME="RTSEnable"   VALUE="1"/>
-    <PARAM   NAME="DTREnable"   VALUE="1"/>
-    <PARAM   NAME="Handshaking"   VALUE="0"/>
-    <PARAM   NAME="NullDiscard"   VALUE="0"/>
-    <PARAM   NAME="ParityReplace"   VALUE="?"/>
-    <PARAM   NAME="EOFEnable"   VALUE="0"/>
-    <PARAM   NAME="InputMode"   VALUE="0"/>
-    <PARAM   NAME="InBufferSize"   VALUE="1024"/>
-    <PARAM   NAME="InputLen"   VALUE="0"/>
-    <PARAM   NAME="OutBufferSize"   VALUE="512"/>
-    <PARAM   NAME="SThreshold"   VALUE="0"/>
-    <PARAM   NAME="RThreshold"   VALUE="1"/>
-</OBJECT>
 <form class="layui-form ">
     <div class="layui-form-item ">
         <p class="show ">卡号：<span id="cardNo"></span></p>
         <label class="layui-form-label condition">支付方式:</label>
         <div class="layui-input-block condition">
-            <input type="radio" name="status" value="1" title="现金" checked>
-            <input type="radio" name="status" value="2" title="刷卡">
-            <input type="radio" name="status" value="3" title="微信">
-            <input type="radio" name="status" value="4" title="支付宝">
+            <input type="radio" name="payType" value="cash" title="现金" checked>
+            <input type="radio" name="payType" value="cart" title="刷卡">
+            <input type="radio" name="payType" value="wechat" title="微信">
+            <input type="radio" name="payType" value="alipay" title="支付宝">
         </div>
     </div>
-    <input type="hidden" name="state" id="state" />
-    <input type="hidden" name="cart" id="Number" />
+    <input type="hidden" name="cardNumber" id="Number"/>
     <div class="layui-form-item">
         <div class="layui-inline">
             <label class="layui-form-label">支付金额:</label>
             <div class="layui-input-inline">
-                <input type="text" name="price" id="price" autocomplete="off" readonly
+                <input type="text" name="money" id="money" autocomplete="off" readonly
                        class="layui-input">
             </div>
         </div>
     </div>
     <div class="layui-input-block" style="position: fixed; right: 10px; bottom: 10px;">
         <button class="layui-btn layui-btn-sm condition" lay-submit="" id="tally" lay-filter="tally">挂账</button>
-        <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="formData" data-id="1">手动确定</button>
-        <button class="layui-btn layui-btn-sm" lay-submit="" id="btnSave1" lay-filter="formData">自动确定</button>
+        <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="formData">支付</button>
+        <!--<button class="layui-btn layui-btn-sm" lay-submit="" id="btnSave1" lay-filter="formData">自动确定</button>-->
         <button type="button" class="layui-btn layui-btn-sm layui-btn-primary" id="back">取消</button>
     </div>
 </form>
 <script src="js/loadjs.js" type="text/javascript" charset="utf-8"></script>
-<SCRIPT LANGUAGE=javascript FOR=MSComm1 EVENT=OnComm>
-    MSComm1_OnComm()
-    function MSComm1_OnComm() {
-        switch(MSComm1.CommEvent) {
-            case 1:
-            {
-                alert("Send OK！");
-                break;
-            } //发送事件
-            case 2:
-            {
-                Receive();
-                break;
-            } //接收事件
-            default:
-                alert("Event Raised!" + MSComm1.CommEvent);;
-        }
-    }
-</SCRIPT>
 <script>
-    var _str_,_postData_={},_pay_index=0;
+    var _str_, _postData_ = {}, _pay_index = 0;
     layui.use(['form', 'jquery'], function () {
         var form = layui.form, $ = layui.$, id = 0, s = '';
 
@@ -88,27 +51,22 @@
         });
 
         $(function () {
-            var state = getUrl('state');
             var no = getUrl('no');
             var price = getUrl('price');
-            $("#price").val(price);
+            $("#money").val(price);
             $("#Number").val(no);
-            $("#state").val(state);
             $("#cardNo").text(no);
-            if(state==1){
-                $(".condition").addClass("layui-hide");
-            }
         });
 
         //挂账
         form.on('submit(tally)', function (data) {
 
-            var uu  = 'iframe_tally1.html?type=1'//新增
-            if(getUrl("id")){
-                uu = 'iframe_tally1.html?type=2&id='+getUrl("id")//编辑
+            var uu = 'iframe_tally1.html?type=1'//新增
+            if (getUrl("id")) {
+                uu = 'iframe_tally1.html?type=2&id=' + getUrl("id")//编辑
             }
             var oo = JSON.parse(sessionStorage.addMemberInfo);
-            sessionStorage.addMemberInfo = JSON.stringify( $.extend({}, data.field, oo) );
+            sessionStorage.addMemberInfo = JSON.stringify($.extend({}, data.field, oo));
             parent.layer.open({
                 type: 2,
                 skin: 'demo-class',
@@ -129,193 +87,41 @@
         form.on('submit(formData)', function (data) {
             var oo = JSON.parse(sessionStorage.addMemberInfo);
             urlll = api.addMember;
-            if(oo.birthday)oo.birthday = new Date(oo.birthday)
-            if(getUrl("id")){
-                oo.id=getUrl("id");
+            if (getUrl("id")) {
+                oo.id = getUrl("id");
                 urlll = api.updateMember;
             }
-            var _p = data.field.status;
-            _postData_ = $.extend({}, data.field, oo);
-            flagg = $(this).data("id")==1;
-            if(_p==1) {
-                var index = layer.load(1,{time:10*1000});
-                $.ajax({
-                    data: $.extend({}, data.field, oo),
-                    type: "POST",
-                    dataType: "JSON",
-                    url: urlll,
-                    beforeSend: function () {
-                        $("#btnSave").addClass('layui-btn-disabled');
-                    },
-                    complete: function () {
-                        layer.close(index);
-                        $("#btnSave").removeClass('layui-btn-disabled');
-                    },
-                    success: function (rs) {
-                        layer.close(index);
-                        if (rs.success) {
-                            // layer.alert("成功", function () {
-                                if(getUrl('price')=='0')
-                                    layer.alert("成功", function () {
-                                        parent.confirmYes();
-                                        no();
-                                    })
-                                else{
-                                    parent.layer.confirm('打印账单吗?', {icon: 3, title: '提示'}, function (index) {
-                                        parent.confirmYes();
-                                        no();
-                                        window.open('shopPrinting.html?id=' + rs.data, "_blank", "toolbar=yes, location=yes, directories=no, status=no, menubar=yes, scrollbars=no, resizable=no, copyhistory=yes");
-                                        parent.layer.closeAll();
-                                    },function () {
-                                        parent.parent.location.reload()
-                                    });
-
-                                }
-
-                        } else {
-                            layer.alert(rs.errMsg, {title: '提示信息', icon: 5});
-                        }
+            var index = layer.load(1, {time: 10 * 1000});
+            $.ajax({
+                data: $.extend({}, data.field, oo),
+                type: "POST",
+                dataType: "JSON",
+                url: urlll,
+                beforeSend: function () {
+                    $("#btnSave").addClass('layui-btn-disabled');
+                },
+                complete: function () {
+                    layer.close(index);
+                    $("#btnSave").removeClass('layui-btn-disabled');
+                },
+                success: function (rs) {
+                    layer.close(index);
+                    if (rs.success) {
+                        parent.layer.confirm('打印账单吗?', {icon: 3, title: '提示'}, function (index) {
+                            window.open('shopPrinting.html?id=' + rs.data, "_blank", "toolbar=yes, location=yes, directories=no, status=no, menubar=yes, scrollbars=no, resizable=no, copyhistory=yes");
+                            parent.layer.closeAll();
+                        }, function () {
+                            parent.parent.location.reload()
+                        });
+                    } else {
+                        layer.alert(rs.errMsg, {title: '提示信息', icon: 5});
                     }
-                });
-            }else if(flagg){
-                var pt = '';
-                if(_p==2){
-                    pt=0;
-                }else if(_p==3){
-                    pt=1;
-                }else if(_p==4){
-                    pt=2;
                 }
-                __allPayNumber = Date.now();
-                Receive1(JSON.stringify({payTp:pt,code:1,transAmount:$("#price").val()}))
-            }
-
-            else {
-                _str_ = ''
-                _pay_index = layer.load(1,{time:10*1000});
-                var payjson = $.extend({},PAYJSON)
-                if (_p == 2) {
-                    payjson.payTp = 0;
-                }
-                if (_p == 3) {
-                    payjson.payTp = 11;
-                    payjson.procCd=660000;
-                }
-                if (_p == 4) {
-                    payjson.payTp = 12;
-                    payjson.procCd=660000;
-                }
-                __allPayNumber = payjson.orderNo = Date.now();
-                if(!getUrl("price")||getUrl("price")=='null'){
-                    layer.alert("交易金额有误")
-                    layer.close(_pay_index);
-                    return false;
-                }
-                payjson.amt = getUrl("price");
-                // payjson.amt = 0.01;
-                Send(JSON.stringify(payjson));
-            }
+            });
             return false;
         });
 
     });
-
-
-    setTimeout(function () {
-        MSComm1.PortOpen == false;
-        OperatePort();
-    },1000)
-    function OperatePort() {
-        if(MSComm1.PortOpen == true) {
-            try {
-                MSComm1.PortOpen = false;
-            } catch(ex) {
-                alert(ex.message);
-            }
-        } else {
-            try {
-                MSComm1.CommPort = localStorage.posport?localStorage.posport:6
-                MSComm1.Settings = 115200 +
-                    ",N" +
-                    ",8" +
-                    ",1";
-                MSComm1.OutBufferCount = 0; //清空发送缓冲区
-                MSComm1.InBufferCount = 0; //滑空接收缓冲区
-                MSComm1.PortOpen = true;
-            } catch(ex) {
-                alert(ex.message);
-            }
-        }
-    }
-
-    function Send(orgstr) {
-        try {
-            MSComm1.Output = orgstr;
-            console.info("发送数据到pos机："+orgstr);
-        } catch(ex) {
-            alert(ex.message);
-        }
-    }
-
-    function Receive() {
-        _str_+= MSComm1.Input;
-        if(_str_.indexOf('}')!=-1){
-            Receive1(_str_)
-        }
-    }
-
-    function Receive1(data) {
-        layer.close(_pay_index);
-        var _data = JSON.parse(data);
-        if(_data.code=="-1"){
-            layer.alert(_data.message);
-            return false;
-        }
-        pd = $.extend({},_postData_,_data);
-        if(__allPayNumber)pd.payNumber = __allPayNumber;
-        console.log("最终提交数据如下")
-        console.info(pd);
-
-        var index = layer.load(1,{time:10*1000});
-        $.ajax({
-            data: pd,
-            type: "POST",
-            dataType: "JSON",
-            url: urlll,
-            beforeSend: function () {
-                $("#btnSave").addClass('layui-btn-disabled');
-            },
-            complete: function () {
-                layer.close(index);
-                $("#btnSave").removeClass('layui-btn-disabled');
-            },
-            success: function (rs) {
-                layer.close(index);
-                if (rs.success) {
-                    // layer.alert("成功", function () {
-                    //     parent.confirmYes();
-                    //     no();
-                    // })
-                    if(getUrl('price')=='0')
-                        layer.alert("成功", function () {
-                            parent.confirmYes();
-                            no();
-                        })
-                    else
-                    parent.layer.confirm('打印账单吗?', {icon: 3, title: '提示'}, function (index) {
-                        parent.confirmYes();
-                        no();
-                        window.open('shopPrinting.html?id=' + rs.data, "_blank", "toolbar=yes, location=yes, directories=no, status=no, menubar=yes, scrollbars=no, resizable=no, copyhistory=yes");
-                        parent.layer.closeAll();
-                    });
-                } else {
-                    layer.alert(rs.errMsg, {title: '提示信息', icon: 5});
-                }
-            }
-        });
-
-    }
-
 </script>
 </body>
 </html>
